# autonomous-object-tracking-robotic-car

./: CMakeLists.txt  README.md  final_car
src/: ball_auto_manual.cpp
